added ref for PL/I

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -271,3 +271,13 @@
 	publisher = {Springer-Verlag},
 	address = {Berlin, Heidelberg},
 }
+
+@TechReport{RWSB68,
+	Author="Raymond J. Rubey and Richard C. Wick and William J. Stoner and Laurel Bentley",
+	Title="Comparative Evaluation of PL/I",
+	Month="April",
+	Year="1968",
+	URL="http://oai.dtic.mil/oai/oai?verb=getRecord&metadataPrefix=html&identifier=AD0669096",
+	Institution="Logicon Inc",
+}
+
