--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -504,6 +504,8 @@ In addition, a programming language is called safe, when it protects its own abs
 
 Statically typed languages are in general resilient to several fuzzing techniques, since the compiler catches all syntax or type errors and fail the compilation process. Dynamic languages like python, perl and ruby are evaluating many things at runtime and usually they fail upon execution or produce corrupted output.
 
+Different behaviour and productivity issues of the programmers, are also pointed out in the reference \cite{RWSB68}, which states that high-level abstractions of PL/I, resulting in fewer program statements, but had higher frequency of errors by the programmer. To support this, a programmer implemented twice seven benchmark problems in PL/I and in one other language; Cobol, Fortran and Jovial. The aforementioned publication is very interesting, because it correlates directly the language abstractions with the user productivity and efficiency, in terms of valid code. An experinment similar, to the one presented in this research.
+
 \section{Conclusions} % {{{1
 \label{sec:conclusions}
 
