Add bwk's Pascal vs C article

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -271,3 +271,17 @@
 	publisher = {Springer-Verlag},
 	address = {Berlin, Heidelberg},
 }
+
+@TechReport{Ker81,
+	Author="Brian W. Kernighan",
+	Title="Why {P}ascal is Not My Favorite Programming Language",
+	Type="Computer Science Technical Report",
+	Note="Available online at http://cm.bell-labs.com/cm/cs/cstr. (Reprinted in Comparing and Assessing Programming Languages Ed. A. Feuer N. Gehani Prentice-Hall 1984)",
+	Number="100",
+	Month=jul,
+	Year="1981",
+	Institution="Bell Laboratories",
+	Address="Murray Hill, NJ",
+	Where="Box 12"
+	}
+
