A start for the related work section

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -497,6 +497,8 @@ dangerously loose syntax.
 
 \section{Related Work} % {{{1
 \label{sec:related}
+Comparative language evaluation has a long and colorful history;
+see for instance reference \cite{Ker81} and the reference therein.
 
 Fuzzing as a technique to investigate the reliability of software
 was first proposed in an article by Miller and his colleagues~\cite{MFS90}.
