added comparison references

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -276,7 +276,6 @@
 	Author="Brian W. Kernighan",
 	Title="Why {P}ascal is Not My Favorite Programming Language",
 	Type="Computer Science Technical Report",
-	Note="Available online at http://cm.bell-labs.com/cm/cs/cstr. (Reprinted in Comparing and Assessing Programming Languages Ed. A. Feuer N. Gehani Prentice-Hall 1984)",
 	Number="100",
 	Month=jul,
 	Year="1981",
@@ -293,3 +292,35 @@
 	URL="http://oai.dtic.mil/oai/oai?verb=getRecord&metadataPrefix=html&identifier=AD0669096",
 	Institution="Logicon Inc",
 }
+
+@article {BOJO80,
+	author = {H. J. Boom and E. de Jong},
+	title = {A critical comparison of several programming language implementations},
+	journal = {Software: Practice and Experience},
+	volume = {10},
+	number = {6},
+	publisher = {John Wiley & Sons, Ltd.},
+	issn = {1097-024X},
+	doi = {10.1002/spe.4380100605},
+	pages = {435--473},
+	keywords = {Algol 60, FORTRAN, Pascal, Algol 68, Programming language implementation, CDC Cyber 73},
+	year = {1980},
+}
+
+@article{PREC00,
+	author = {Lutz Prechelt},
+	title = {An Empirical Comparison of Seven Programming Languages},
+	journal = {Computer},
+	issue_date = {October 2000},
+	volume = {33},
+	number = {10},
+	month = oct,
+	year = {2000},
+	issn = {0018-9162},
+	pages = {23--29},
+	numpages = {7},
+	doi = {10.1109/2.876288},
+	acmid = {621567},
+	publisher = {IEEE Computer Society Press},
+	address = {Los Alamitos, CA, USA},
+} 
