--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -497,9 +497,10 @@ dangerously loose syntax.
 
 \section{Related Work} % {{{1
 \label{sec:related}
+
 Comparative language evaluation has a long and colorful history; Kernighan \cite{Ker81} points out Pascal's design and syntax flaws. A comparison of Algol 60, FORTRAN, Pascal and Algol 68 is presented in reference \cite{BOJO80}.
 
-Different behaviour and productivity issues of the programmers are pointed out in reference \cite{RWSB68}, which states that high-level abstractions of PL/I. helped programmers to write fewer program statements, but with higher frequency of errors. To support this, a programmer implemented twice seven benchmark problems in PL/I and in one other language; Cobol, Fortran and Jovial. The aforementioned publication is very interesting, because it correlates directly the language abstractions with the user productivity and efficiency, in terms of valid program code, with the comparison of programming languages.
+Different behaviour and productivity issues are pointed out in reference \cite{RWSB68}. It states that high-level abstractions of PL/I helped programmers to write fewer program statements, but with higher frequency of errors. To support this, a programmer implemented twice, seven benchmark problems in PL/I and in one other language; Cobol, Fortran and Jovial. The aforementioned publication correlates directly the language abstractions with the user productivity and efficiency, in terms of valid program code.
 
 In reference \cite{PREC00} seven different languages are also compared in terms of reliability, program length among others. This time modern languages are included in the comparison, like C, C++ and Java.
 
@@ -508,36 +509,36 @@ was first proposed in an article by Miller and his colleagues~\cite{MFS90}.
 
 In this paper they tested the common collection of {\sc unix}
 utilities in various operating systems and architectures and discrovered that
-25-33\% of these, are crashing under certain conditions. To perform these tests
+25-33\% of these are crashing under certain conditions. To perform these tests
 they implemented automation shell scripts and a fuzzer, a program that generated
 random character sequences according to certain specifications.
 
-Fuzzing is used mainly to detect software security vulnerabilities and 
-improve overall reliability \cite{TJC08,GODE07}. Several tools and techniques \cite{WWGZ11}
-have been developed, introducing concept like \textit{directed fuzz testing} \cite{GLRI09}.
+Fuzzing techniques are used mainly to detect software security vulnerabilities and 
+improve software reliability \cite{TJC08,GODE07}. Several tools and techniques \cite{WWGZ11}
+have been developed, introducing concepts like \textit{directed fuzz testing} \cite{GLRI09}.
 
-Our approach fuzzes the program with pseudo-random
-perturbations based in same cases on knowledge of
-lexical tokens. This can result in a large number of failures.
-
-An alternative approach, {\em grammar-based white box fuzzing} \cite{God08},
+{\em Grammar-based white box fuzzing} \cite{God08},
 takes into account the input language's grammar to fuzz the input in
-ways that are syntactically correct.
-This results in a higher rate of successful fuzzing and the location
+ways that are syntactically correct. This results in a higher rate of successful fuzzing and the location
 of deeper problems.
 
 Another interesting approach is H-fuzzing \cite{ZWZH11}, which is a heuristic method that examines the execution paths
-of the program to achieve higher path coverage. All these approaches are based on the fact that it is practically impossible to detect all
+of the program to achieve higher path coverage. 
+
+All these approaches are based on the fact that it is practically impossible to detect all
 execution paths and all program inputs to fully test the validity and the reliability of a program.
 
-Random Testing \cite{HAM06} seems to be promising solution that can partially deal with this problem,
+Our approach fuzzes the program with pseudo-random perturbations based in same cases on knowledge of
+lexical tokens.
+
+Random Testing \cite{HAM06} seems to be promising solution that can partially deal with the aforementioned problem,
 but still it is not widely adopted outside the academic fields \cite{GGBO07}, since the techniques it 
-introduces are difficult to be applied in complex systems and achieve good code coverage, if so at a significant cost \cite{RAWO06}.
+introduces are difficult to be applied in complex systems and achieve good code coverage, at a significant cost \cite{RAWO06}.
 
 The above case is made worse with the use of complex refactorings \cite{Fow00} in day-to-day programming. Refactorings are beneficial, but they are programs integrated in {\sc ide}s and also have bugs \cite{DDGM07}. Every bug results in corrupted code, which is very difficult to detect, especially for the case of dynamic langugages \cite{SCHA12,FFM11}.
 
-Our experiment aims to exhibit the fault tolerance \cite{LYU95,KOKR07} of each language and use their features such as 
-their type systems to our advantage. 
+Our experiment aims to exhibit the fault tolerance of each language and use their features such as 
+their type systems to our advantage \cite{LYU95,KOKR07}. 
 
 Type systems are usually realized as type checkers in compilers and linkers of programming languages. They are categorized as static and dynamic. \textit{Static typing} implies static type checking. In other words, the ability of a programming language's compiler to know all the data types that are used in a program, and guarantee that they are correct at compile time. \textit{Dynamic typing} is exactly the opposite. The languages that are dynamically checked perform run-time checks in order to ensure consistent type use. 
 
