Related work copy-editing

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -197,7 +197,7 @@
 	address = {New York, NY, USA},
 } 
 
-@book{PIE02,
+@book{Pie02,
 	Publisher = {MIT Press},
 	Title = {Types and Programming Languages},
 	Author = {Benjamin C. Pierce},
