--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -628,9 +628,15 @@ help in the porting and implementation of the
 and the numerous contributors of {\em Rosetta Code} for
 making their efforts available to the public.
 
-This work is supported by European and Greek national funds
-under the ``Thalis'' action, {\sc stereo} research program
-(2012SE24580099).
+This research has been co-financed by
+the European Union (European Social Fund --- {\sc esf})
+and Greek national funds through the Operational Program
+``Education and Lifelong Learning''
+of the National Strategic Reference Framework ({\sc nsrf})
+--- Research Funding Program:
+Thalis ---
+Athens University of Economics and Business ---
+Software Engineering Research Platform.
 
 \paragraph{Code Availability} The source code for
 the implemented tasks,
