--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -502,7 +502,7 @@ languages with a more imaginative syntax, like Python, Haskell, and Ruby.
 
 The random character substitution fuzz was the one that resulted
 in the lowest number of erroneous results.
-However, it wrecked havoc with {\sc php}s compilation and output,
+However, it wreaked havoc with {\sc php}s compilation and output,
 and JavaScript's compilation.
 This could be associated with how these languages treat source code
 with non-{\sc ascii} characters.
