added github url (placeholder) in availability; added circular in acks

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -634,8 +634,8 @@ test coverage analysis.
 
 \acks
 
-We would like to thank Florents Tselai for significant
-help in the porting and implementation of the
+We would like to thank Florents Tselai and Konstantinos Stroggylos 
+for significant help in the porting and implementation of the
 {\em Rosetta Code} tasks in our environment,
 and the numerous contributors of {\em Rosetta Code} for
 making their efforts available to the public.
@@ -655,8 +655,8 @@ the implemented tasks,
 the fuzzer,
 the language-specific methods, and
 the driver are maintained on GitHub, and
-will be made publicly available as open source software
-before the paper is published.
+are publicly available as open source software on \url{http://XXX}.
+
 % XXX STEREO
 
 % We recommend abbrvnat bibliography style.
